attached_assets/Pasted--KAPELCZAK-NOTES-DEPLOYMENT--1745980433485.txt
          KAPELCZAK NOTES DEPLOYMENT          
===============================================

=== Checking prerequisites ===
✓ curl is installed
✓ wget is installed
✓ npm is installed
✓ node is installed
✓ openssl is installed

=== Setting up PostgreSQL ===
✓ PostgreSQL is already installed
Synchronizing state of postgresql.service with SysV service script with /lib/systemd/systemd-sysv-install.
Executing: /lib/systemd/systemd-sysv-install enable postgresql
✓ PostgreSQL service is running

=== Creating database user and database ===
could not change directory to "/root/replit-sci-main": Permission denied
User kapelczak_user already exists. Resetting password...
could not change directory to "/root/replit-sci-main": Permission denied
ALTER ROLE
could not change directory to "/root/replit-sci-main": Permission denied
Database kapelczak_notes already exists
could not change directory to "/root/replit-sci-main": Permission denied
ALTER ROLE
✓ Database configuration complete
✓ Database connection URL generated

=== Configuring environment variables ===
Backing up existing .env.production to .env.production.bak
✓ Environment configuration created
NOTE: You may need to update SMTP settings in .env.production

=== Installing dependencies ===
npm warn deprecated inflight@1.0.6: This module is not supported, and leaks memory. Do not use it. Check out lru-cache if you want a good and tested way to coalesce async requests by a key value, which is much more comprehensive and powerful.
npm warn deprecated npmlog@5.0.1: This package is no longer supported.
npm warn deprecated @esbuild-kit/esm-loader@2.6.5: Merged into tsx: https://tsx.is
npm warn deprecated har-validator@5.1.5: this library is no longer supported
npm warn deprecated rimraf@3.0.2: Rimraf versions prior to v4 are no longer supported
npm warn deprecated abab@2.0.6: Use your platform's native atob() and btoa() methods instead
npm warn deprecated are-we-there-yet@2.0.0: This package is no longer supported.
npm warn deprecated @esbuild-kit/core-utils@3.3.2: Merged into tsx: https://tsx.is
npm warn deprecated glob@7.2.3: Glob versions prior to v9 are no longer supported
npm warn deprecated domexception@2.0.1: Use your platform's native DOMException instead
npm warn deprecated w3c-hr-time@1.0.2: Use your platform's native performance.now() and performance.timeOrigin.
npm warn deprecated gauge@3.0.2: This package is no longer supported.
npm warn deprecated phantomjs-prebuilt@2.1.16: this package is now deprecated
npm warn deprecated uuid@3.4.0: Please upgrade  to version 7 or higher.  Older versions may use Math.random() in certain circumstances, which is known to be problematic.  See https://v8.dev/blog/math-random for details.
npm warn deprecated html-pdf@3.0.1: Please migrate your projects to a newer library like puppeteer
npm warn deprecated request@2.88.2: request has been deprecated, see https://github.com/request/request/issues/3142

added 2260 packages, and audited 2261 packages in 4m

118 packages are looking for funding
  run `npm fund` for details

62 moderate severity vulnerabilities

To address issues that do not require attention, run:
  npm audit fix

To address all issues (including breaking changes), run:
  npm audit fix --force

Run `npm audit` for details.
✓ Node.js dependencies installed

=== Building the application ===

> rest-express@1.0.0 build
> vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist

vite v5.4.14 building for production...
Browserslist: browsers data (caniuse-lite) is 6 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme
✓ 3526 modules transformed.
../dist/public/index.html                     1.90 kB │ gzip:   0.79 kB
../dist/public/assets/logo-B-NRaPWd.png     245.65 kB
../dist/public/assets/index-CKzUJb-6.css    185.94 kB │ gzip:  28.20 kB
../dist/public/assets/index-ChvOHU4l.js   2,491.34 kB │ gzip: 660.46 kB

(!) Some chunks are larger than 500 kB after minification. Consider:
- Using dynamic import() to code-split the application
- Use build.rollupOptions.output.manualChunks to improve chunking: https://rollupjs.org/configuration-options/#output-manualchunks
- Adjust chunk size limit for this warning via build.chunkSizeWarningLimit.
✓ built in 29.77s

  dist/index.js  148.6kb

⚡ Done in 121ms
✓ Application built successfully
✓ Upload directory created

=== Setting up database schema ===
Database URL: postgresql://kapelczak_user:28738263c014be6944b099cc@localhost:5432/kapelczak_notes

> rest-express@1.0.0 db:push
> drizzle-kit push

No config path provided, using default 'drizzle.config.ts'
Reading config file '/root/replit-sci-main/drizzle.config.ts'
Using 'pg' driver for database querying
[✓] Pulling schema from database...
[i] No changes detected
✓ Database schema created

=== Creating admin user ===
file:///root/replit-sci-main/server/scripts/create-admin.js:7
import { Pool } from 'pg';
         ^^^^
SyntaxError: Named export 'Pool' not found. The requested module 'pg' is a CommonJS module, which may not support all module.exports as named exports.
CommonJS modules can always be imported via the default export, for example using:

import pkg from 'pg';
const { Pool } = pkg;

    at ModuleJob._instantiate (node:internal/modules/esm/module_job:175:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:258:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:540:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.19.1
ESM module import failed, trying CommonJS version...
🔄 Checking for existing admin user...
⏳ Creating admin user...
❌ Error creating admin user: column "displayname" of relation "users" does not exist
error: column "displayname" of relation "users" does not exist
    at /root/replit-sci-main/node_modules/pg/lib/client.js:545:17
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
    at async createAdminUser (/root/replit-sci-main/server/scripts/create-admin.cjs:47:26)

ERROR: Failed to create admin user with both ESM and CommonJS scripts